css/index.css
/*
ADDRESS:weather32.dev

--- 01 TYPOGRAPHY SYSTEM

- FONT SIZE SYSTEM (px)
10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98

- Font weights
Default: 400

- Line weights
Default: 400
Medium: 500
Semi-bold: 600
Bold: 700

-Line heights
Default: 1
Small: 1.05
Paragraph default: 1.6

--- 02 COLORS
- Primary: #1c7ed6
- Tints: #1665ab
- Shades:
- Accents:
- Greys:
#ced4da
#fff

--- 05 SHADOWS

--- 06 BORDER RADIUS
Default: 9px

--- 07 WHITESPACE
- Spacing System (px)
2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128
*/

* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
}

*:focus {
   outline: none;
   /* outline: 4px dotted #0b3256; */
   box-shadow: 0 0 0 0.8rem #bbd8f3;
   transition: all 0.3s;
}

html {
   /* 1 rem = 10px */
   font-size: 62.5%;
   overflow-x: hidden;
   scroll-behavior: smooth;
}
body {
   font-family: "Rubik", sans-serif;
   line-height: 1;
   font-weight: 400;
   overflow-x: hidden;
}

h2 {
   font-size: 4.4rem;
}

h2 {
   font-size: 44px;
}

/**************************/
/*GENERAL REUSABLE COMPONENTS*/
/**************************/
.container {
   max-width: 120rem;
   margin: 0 auto;
   padding: 0 3.2rem;
}

.container-feat {
   max-width: 130rem;
}

.center-text {
   text-align: center;
}

.margin-right-sm {
   margin-right: 1.6rem !important;
}

.margin-bottom-md {
   margin-bottom: 4.2rem !important;
}

.grid {
   display: grid;
   gap: 9.6rem;
   /* margin-bottom: 9.6rem; */
}

/* .grid:last-child {
   margin-bottom: 0;
} */

.grid:not(:last-child) {
   margin-bottom: 9.6rem;
}

.grid--center-v {
   align-items: center;
}

.grid--2-cols {
   grid-template-columns: repeat(2, 1fr);
   gap: 12.8rem;
}

.grid--3-cols {
   grid-template-columns: repeat(3, 1fr);
}

/* .grid--3-cols:nth-child(2) {
   grid-template-columns: repeat(3, 1fr);
} */

.grid--4-cols {
   grid-template-columns: repeat(4, 1fr);
   gap: 7.2rem;
}

.grid--5-cols {
   grid-template-columns: repeat(5, 1fr);
   gap: 7.2rem;
}

.heading-primary {
   font-size: 5rem;
   font-weight: 700;
   margin-bottom: 3.2rem;
   line-height: 1.05;
   letter-spacing: -0.5px;
   color: #fff;
}
.btn,
.btn:link,
.btn:visited {
   font-size: 2rem;
   font-weight: 600;

   text-decoration: none;

   display: inline-block;
   padding: 1.6rem 3.2rem;
   border-radius: 9px;

   transition: all 1s;

   border: none;
   cursor: pointer;
}

.btn--full:link,
.btn--full:visited {
   color: white;
   background-color: #1c7ed6;
}

.btn--full:hover,
.btn--full:active {
   color: #1c7ed6;
   background-color: white;
   /* outline: 4px solid #1c7ed6;*/ /* nie wplywa na rozmiar buttona, rysowana nad*/
   box-shadow: inset 0 0 0 4px #1c7ed6;
}

.btn--outline:link,
.btn--outline:visited {
   background-color: #1c7ed6;
   color: white;
}

.btn--outline:hover,
.btn--outline:active {
   color: #1c7ed6;
   background-color: white;
   /* outline: 4px solid #1c7ed6;*/ /* nie wplywa na rozmiar buttona, rysowana nad*/
   box-shadow: inset 0 0 0 4px #1c7ed6;
}

.btn--form {
   background-color: #0b3256;
   color: #e8f2fb;
   align-self: end;
   padding: 1.2rem;
}

.btn--form:hover {
   background-color: #e8f2fb;
   color: #0b3256;
}

/**************************/
/*       HEADER           */
/**************************/
.logo {
   height: 3.2rem;
   align-self: center;
   cursor: pointer;
}

.logo:hover {
   transform: scale(1.1);
   transition: ease 1.5s;
}

.header {
   display: flex;
   justify-content: space-between;
   align-items: center;

   /* TO MAKE THE HEADER STICKY LATER */
   height: 6.2rem;
   padding: 0 4.8rem;
   overflow-x: hidden;
}

/**************************/
/*       HEADER           */
/**************************/
.main-nav {
   /* background-color: green; */
   /* background-image: linear-gradient(to right, red, blue); */
   font-size: 2rem;
   font-weight: 700;
   cursor: pointer;
}

.main-nav-list {
   list-style: none;
   display: flex;
   align-items: center;
   gap: 4.8rem;
}

.main-nav-link:link,
.main-nav-link:visited {
   text-decoration: none;
   color: white;
   font-size: 1.8rem;
   font-weight: 500;

   transition: all 0.3;
}

.main-nav-link:hover,
.main-nav-link:active {
   display: inline-block;
   text-decoration: none;
   color: #ced4da;
   font-size: 1.8rem;
   font-weight: 500;
}

.main-nav-link.nav-cta:link,
.main-nav-link.nav-cta:visited {
   padding: 0.8rem 1.6rem;
   border-radius: 9px;
   background-color: #1c7ed6;
   transition: all 1s;
}

.main-nav-link.nav-cta:hover,
.main-nav-link.nav-cta:active {
   color: #1c7ed6;
   background-color: white;
   /* outline: 4px solid #1c7ed6;*/ /* nie wplywa na rozmiar buttona, rysowana nad*/
   box-shadow: inset 0 0 0 2px #1c7ed6;
}

/* STICKY NAVIGATION */
.sticky-nav .header {
   position: fixed;
   top: 0;
   bottom: 0;
   width: 100%;
   height: 6 rem;
   padding-top: 0;
   padding-bottom: 0;
   background-color: rgba(8, 38, 64, 0.95);
   z-index: 9999;
   box-shadow: 0 1.2rem 3.2rem rgba(0, 0, 0, 0.03);
}

.sticky-nav .section-hero {
   margin-top: 6.2rem;
}

/* MOBILE */
.btn-mobile-nav {
   border: none;
   background: none;
   cursor: pointer;
   display: none;
}

.icon-mobile-nav {
   height: 4.2rem;
   width: 4.2rem;
   color: #1c7ed6;
}

.icon-mobile-nav[name="close-outline"] {
   display: none;
}

/**************************/
/* HERO SECTION*/
/**************************/
.section-hero {
   padding: 4.8rem 3.2rem 9.6rem 3.2rem;
   min-height: 100vh;
   margin: 0 auto;
}

.hero-background {
   /* background-color: brown; */
   min-height: 100vh;
   position: relative;
   background-image:
      linear-gradient(rgba(22, 22, 22, 0.6), rgba(22, 22, 22, 0.6)),
      url(../img/hero.jpg);
   background-size: cover;
   background-position: center;
   color: #fff;
}
/* ... */

